[project]
name = "jpx-derivatives"
version = "0.1.0"
description = "JPX Derivatives Data Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=2.32.3",
    "requests",
]

[tool.uv]
dev-dependencies = [
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]